# Rift

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  discord.rs  downloads.rs  fetch.rs  lib.rs  library.rs  main.rs  media.rs  player.rs  settings.rs  util.rs
src-tauri/src/commands/: bootstrap.rs  convert.rs  downloads.rs  library.rs  mod.rs  playback.rs  queue.rs  search.rs  updates.rs  window.rs  ytdlp.rs
src-tauri/src/player/: events.rs  mod.rs  nav.rs  playback.rs  queue.rs  state.rs  tests.rs
types/: Cargo.toml
types/src/: lib.rs
ui/: Cargo.toml  Trunk.toml  index.html  styles.css
ui/src/: api.rs  app.rs  components.rs  main.rs
ui/src/components/: grids.rs  home.rs  icons.rs  menu.rs  mod.rs  player_bar.rs  queue.rs  reorder.rs  settings.rs  sidebar.rs  titlebar.rs  track_list.rs  update_banner.rs
