[package]
name = "rift"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "An ad-free YouTube Music player"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.102"
rand = "0.10.1"
reqwest = "0.12"
rift-types = { path = "../types" }
rodio = "0.22.2"
rustypipe = "0.11.4"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
