[package]
name = "rift-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rift-types = { path = "../types" }
serde.workspace = true
serde_json.workspace = true
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "HtmlInputElement", "HtmlSelectElement", "Navigator", "DragEvent"] }
gloo-timers = { version = "0.3", features = ["futures"] }
